# Science-Nerds

./: README.md  manage.py  pyproject.toml
accounts/: decorators.py  filters.py  signals.py  views.py
accounts/migrations/: 0001_initial.py  0003_order_customer_order_product.py  0006_alter_product_category.py  0007_alter_product_description.py  0008_order_note.py  0010_customer_user.py  0013_alter_customer_profile_image.py
accounts/templates/accounts/: customer.html  navbar.html  order_form.html  products.html  status.html  user.html
sciencenerds/: asgi.py  pyproject.toml  settings.py
sciencenerds/accounts/: admin.py  decorators.py  forms.py  models.py  urls.py  views.py
sciencenerds/accounts/migrations/: 0002_order_product.py  0004_tag_order_tags.py  0005_remove_order_tags_product_tags.py  0009_remove_order_note.py  0011_customer_profile_image.py  0012_alter_customer_user.py
sciencenerds/accounts/templates/accounts/: account_settings.html  customers.html  dashboard.html  delete.html  home.html  login.html  main.html  navbar.html  order_form.html  products.html  register.html  status.html  update_form.html  user.html
sciencenerds/sciencenerds/: settings.py  urls.py  wsgi.py
sciencenerds/static/css/: main.css
static/css/: main.css
