[tool.poetry]
name = "science nerds"
version = "0.1.0"
description = "A Customer Management Platform built with Django."
authors = ["Brenda <mejiab19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
django = "^5.0"
djangorestframework = "^3.14.0"
django-filter = "^23.5"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
